themes/trafiklab-2021/assets/sass/main.scss
@import 'modern-normalize';

@import 'variables';
@import 'fonts';
@import 'typography';
@import 'layout';
@import 'base';
@import 'header';
@import 'footer';
@import 'docs';
@import 'override';
@import 'partials/mailchimp';
@import 'partials/image_header';
@import 'partials/landing_roller';
@import 'partials/docs_footer';
@import 'partials/logowall';
@import 'shortcodes/tabs';
@import 'shortcodes/highlight';
@import 'shortcodes/admoniton';
@import 'shortcodes/swagger_ui';
@import 'blogposts';

body {
  font-family: $alternative-font;
  font-weight: 400;
}

body a, body a:link, body a:visited {
  color: unset;
  transition: .5s;
}

.page p img {
  margin: 0 auto;
  width: auto;
  max-width: 100%;
}

/* Support for aligning images left, right, and limiting height by wrapping them in a div. Should be fixed by making
use of the hugo figure shorthand code */
.page .right {
  float: right;
  max-width: 50%;
}

.page .left {
  float: left;
  max-width: 50%;
}

.vh20 img {
  max-height: 20vh;
}

.vh30 img {
  max-height: 30vh;
}

.vh40 img {
  max-height: 40vh;
}

.vh50 img {
  max-height: 50vh;
}

code:not(.highlight code):not(#swagger-ui code) {
  background-color: $grey;
  border-radius: $border-radius-default/2;
  padding: 0.10rem;
  margin: 0.10rem 0;
  font-size: 0.9rem;
}

